@@ -20,6 +20,7 @@ public class CaseChangersTest {
         Assert.assertEquals("", CaseChangers.LOWER.changeCase(""));
         Assert.assertEquals("lower", CaseChangers.LOWER.changeCase("LOWER"));
         Assert.assertEquals("lower {UPPER}", CaseChangers.LOWER.changeCase("LOWER {UPPER}"));
+        Assert.assertEquals("lower {U}pper", CaseChangers.LOWER.changeCase("LOWER {U}PPER"));
     }
 
     @Test
@@ -29,7 +30,8 @@ public class CaseChangersTest {
         Assert.assertEquals("UPPER", CaseChangers.UPPER.changeCase("upper"));
         Assert.assertEquals("UPPER", CaseChangers.UPPER.changeCase("UPPER"));
         Assert.assertEquals("UPPER {lower}", CaseChangers.UPPER.changeCase("upper {lower}"));
-        }
+        Assert.assertEquals("UPPER {l}OWER", CaseChangers.UPPER.changeCase("upper {l}ower"));
+    }
 
     @Test
     public void testChangeCaseUpperFirst() {
@@ -37,7 +39,7 @@ public class CaseChangersTest {
         Assert.assertEquals("Upper first", CaseChangers.UPPER_FIRST.changeCase("upper First"));
         Assert.assertEquals("Upper first", CaseChangers.UPPER_FIRST.changeCase("uPPER FIRST"));
         Assert.assertEquals("Upper {NOT} first", CaseChangers.UPPER_FIRST.changeCase("upper {NOT} FIRST"));
-
+        Assert.assertEquals("Upper {N}ot first", CaseChangers.UPPER_FIRST.changeCase("upper {N}OT FIRST"));
     }
 
     @Test
@@ -45,6 +47,7 @@ public class CaseChangersTest {
         Assert.assertEquals("", CaseChangers.UPPER_EACH_FIRST.changeCase(""));
         Assert.assertEquals("Upper Each First", CaseChangers.UPPER_EACH_FIRST.changeCase("upper each First"));
         Assert.assertEquals("Upper Each First {NOT} {this}", CaseChangers.UPPER_EACH_FIRST.changeCase("upper each first {NOT} {this}"));
+        Assert.assertEquals("Upper Each First {N}ot {t}his", CaseChangers.UPPER_EACH_FIRST.changeCase("upper each first {N}OT {t}his"));
     }
 
     @Test
@@ -53,6 +56,8 @@ public class CaseChangersTest {
         Assert.assertEquals("Upper Each First", CaseChangers.TITLE.changeCase("upper each first"));
         Assert.assertEquals("An Upper Each First And", CaseChangers.TITLE.changeCase("an upper each first and"));
         Assert.assertEquals("An Upper Each of the and First And", CaseChangers.TITLE.changeCase("an upper each of the and first and"));
+        Assert.assertEquals("An Upper Each of: The and First And", CaseChangers.TITLE.changeCase("an upper each of: the and first and"));
         Assert.assertEquals("An Upper First with and without {CURLY} {brackets}", CaseChangers.TITLE.changeCase("AN UPPER FIRST WITH AND WITHOUT {CURLY} {brackets}"));
+        Assert.assertEquals("An Upper First with {A}nd without {C}urly {b}rackets", CaseChangers.TITLE.changeCase("AN UPPER FIRST WITH {A}ND WITHOUT {C}URLY {b}rackets"));
     }
 }
